samples/_failures_safe/1761617203_d76f85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ae36063.c: In function ‘main’:
./samples/SAFE/__tmp_3ae36063.c:141:29: error: expected ‘)’ at end of input
  141 |         cleanup_context(&ctx
      |                        ~    ^
      |                             )
./samples/SAFE/__tmp_3ae36063.c:141:9: error: expected declaration or statement at end of input
  141 |         cleanup_context(&ctx
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3ae36063.c:141:9: error: expected declaration or statement at end of input
